# VOICE-INTELLIGENCE

./: .gitignore  README.md  package-lock.json  package.json  plan.md  spec.md  tasks.md
skills/: summary.md
src/: App.tsx  index.css
src-tauri/: .env.example  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/input/: injector.rs
src-tauri/src/llm/: groq.rs  mod.rs  prompt.rs  whisper.rs
src-tauri/src/skills/: loader.rs  mod.rs
src/components/: AudioVisualizer.tsx  SettingsOverlay.tsx
src/hooks/: useAudioRecorder.ts  useAudioVisualizer.ts
