[package]
name = "voice-intelligence"
version = "0.1.0"
description = "Voice Intelligence - A voice-controlled text generation HUD"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "voice_intelligence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Phase 2: HTTP Client & Async Runtime
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"

# Phase 3: Skill Loader
serde_yaml = "0.9"
walkdir = "2.4"

# Phase 4: Text Injection & Clipboard
enigo = "0.3"
arboard = "3.4"

# Windows-native API for aggressive topmost window handling
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }

[profile.dev]
debug = 0
incremental = false

